# konkon

./: pyproject.toml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/src/main_app/: enums.py  main.py  models.py
backend/src/main_app/config/: db_connect.py
backend/src/main_app/migrations/: env.py
backend/src/main_app/migrations/versions/: 0c423c0aa363_initial.py  280da17e441d_initial.py  30b2bab02c2a_initial.py  60fba79f57cb_initial.py  71e48db355f1_initial.py  a3614891900e_initial.py  a36181356f37_initial.py  be01f9c150fc_initial.py  fe20d1deabd4_initial.py
frontend/: package-lock.json
frontend/konkon-frontend/: README.md  angular.json  package-lock.json  package.json
frontend/konkon-frontend/src/: index.html
frontend/konkon-frontend/src/app/: app.component.spec.ts  app.component.ts
src/: main.py
src/main_app/: enums.py  main.py  models.py
src/main_app/migrations/versions/: 26b42c0558ae_initial.py  29cc3fc09330_initial.py  418c3dcb6a3b_initial.py  55f033911d3d_initial.py  a910ef4b7868_initial.py  b12e57189392_initial.py  b8b1fd579574_initial.py  bcab65e077ab_initial.py
