[tool.poetry]
name = "konkon"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
requests = "^2.32.3"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
psycopg = "^3.2.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
fastapi-filter = "^2.0.0"
docker = "^7.1.0"
pycryptodome = "^3.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
